[gd_scene load_steps=4 format=3 uid="uid://w2qx2n1s01dq"]

[ext_resource type="StyleBox" uid="uid://8pqjd5ntdrxs" path="res://Styles/text_button_normal.tres" id="1_jsmre"]
[ext_resource type="Script" uid="uid://dtijhnr5lcyhn" path="res://Scripts/show_choice_popup.gd" id="1_quruc"]
[ext_resource type="StyleBox" uid="uid://ddedinc12x8al" path="res://Styles/text_button_active.tres" id="2_quruc"]

[node name="ShowChoicePopup" type="MarginContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -130.5
offset_bottom = 130.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 130
theme_override_constants/margin_right = 130
script = ExtResource("1_quruc")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="ContentMargin" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 5

[node name="Content" type="VBoxContainer" parent="PanelContainer/ContentMargin"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/ContentMargin/Content"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
text = "Choice made:"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ChoiceLabel" type="Label" parent="PanelContainer/ContentMargin/Content"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7372549, 0.42352942, 0.14509805, 1)
theme_override_font_sizes/font_size = 168
text = "A choice"
horizontal_alignment = 1

[node name="DoneButton" type="Button" parent="PanelContainer/ContentMargin/Content"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.05882353, 0.30980393, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0.96862745, 0.972549, 1)
theme_override_colors/font_hover_color = Color(0.05882353, 0.30980393, 0, 1)
theme_override_font_sizes/font_size = 128
theme_override_styles/normal = ExtResource("1_jsmre")
theme_override_styles/pressed = ExtResource("2_quruc")
theme_override_styles/hover = ExtResource("1_jsmre")
text = "Done"

[connection signal="pressed" from="PanelContainer/ContentMargin/Content/DoneButton" to="." method="_on_done_button_pressed"]
